retrieveNA31/objects/Core_IPS_MAP_Product__c.object
<CustomObject>
    <description>List of Products related to this MAP/PAR record</description>
    <fields>
        <fullName>Core_IPS_Supported_Product_EOIS__c</fullName>
        <description>Indicates if the Supported Product is no longer being supported by the Support Org. When EOIS=TRUE, the product is no longer supported.</description>
        <formula>Core_MAP_Supported_Product__r.Core_EOIS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>When EOIS=TRUE it indicates that the Supported Product is no longer supported by the Support Org</inlineHelpText>
        <label>Supported Product EOIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_MAP_PAR__c</fullName>
        <description>Reference to the MAP/PAR header</description>
        <inlineHelpText>MAP/PAR Header Record</inlineHelpText>
        <label>MAP/PAR</label>
        <referenceTo>Core_IPS_MAP_PAR__c</referenceTo>
        <relationshipLabel>Product Access: Products</relationshipLabel>
        <relationshipName>MAP_Supported_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Core_MAP_Supported_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Select the Supported Product you would like to add to this MAP.</description>
        <inlineHelpText>Please select the Supported Product</inlineHelpText>
        <label>Supported Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Core_IPS_Supported_Product__c.Core_EOIS__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>1) Only products that are not EOIS will be shown
2) Please select Supported Products from your Support Org only
3) Please select the &quot;All Fields&quot; radio button when searching</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Core_IPS_Supported_Product__c</referenceTo>
        <relationshipLabel>Product Access: Products</relationshipLabel>
        <relationshipName>MAP_Supported_Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Supported_Product_Name__c</fullName>
        <description>Supported Product Name</description>
        <formula>Core_MAP_Supported_Product__r.Core_Supported_Product_Name__c</formula>
        <inlineHelpText>Supported Product Name</inlineHelpText>
        <label>Supported Product Name</label>
        <type>Text</type>
    </fields>
    <label>Product Access: Products</label>
    <nameField>
        <displayFormat>IAP-{0000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Access: Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Core_IPS_Prevent_Product_JO_Edit</fullName>
        <active>true</active>
        <description>Prevent a user from changing the supported product lookup on an existing map/par product JO record.</description>
        <errorConditionFormula>IF(ISCHANGED(Core_MAP_Supported_Product__c),NOT ISNULL(PRIORVALUE(Core_MAP_Supported_Product__c)),FALSE)</errorConditionFormula>
        <errorMessage>You cannot change a Supported Product.  You can only add a new Supported Product or delete an existing Supported Product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Core_Prevent_SupportedProduct_Not_In_Org</fullName>
        <active>true</active>
        <description>This will prevent saving of a Supported Product that is not part of the Org</description>
        <errorConditionFormula>Core_MAP_Supported_Product__r.Core_Product_Organization__r.Id&lt;&gt;Core_MAP_PAR__r.Core_Product_Organization__r.Id</errorConditionFormula>
        <errorDisplayField>Core_MAP_Supported_Product__c</errorDisplayField>
        <errorMessage>You may only select a Supported Product from the current MAP&apos;s Support Org.</errorMessage>
    </validationRules>
</CustomObject>